@@ -1,3 +1,4 @@
+28 Sep 2006 RSS instruction format and ECTG instruction - Jan Jaeger
 26 Sep 2006 PR# misc/99: Config file "include <filename>" with "Enhanced"
             symbol substitution - Hackules & Enrico Sorichetti by Fish
 26 Sep 2006 Fix ieee bfp to integer conversions - Jimmy by Greg Smith
